# decomment

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/after/: hello.c  hello.py
examples/before/: hello.c  hello.py
include/: buf.h  cli.h  decomment.h  fs.h  lang.h  log.h  platform.h
src/: buf.c  cli.c  fs.c  lang.c  log.c  main.c  platform.c
src/handlers/: c_like.c  handlers.h  hash.c  lua.c  python.c  shell.c
tests/: create_binary_fixture.sh  run_tests.sh  test_framework.h  test_main.c
tests/fixtures/: sample.c  sample.js  sample.lua  sample.py  sample.sh  sample.yaml  tricky_strings.c  tricky_strings.js  tricky_strings.py
tests/fixtures/expected/: sample.c  sample.js  sample.lua  sample.py  sample.sh  sample.yaml
